# wasm-split-prototype

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile
.github/: dependabot.yml
.github/workflows/: test.yml
crates/: magic_constants.rs
crates/wasm_split/: Cargo.toml  README.md
crates/wasm_split/src/: lib.rs  marker.rs  rt.rs
crates/wasm_split_cli/: Cargo.toml  README.md
crates/wasm_split_cli/src/: dep_graph.rs  emit.rs  js.rs  lib.rs  magic_constants.rs  main.rs  range_map.rs  read.rs  reloc.rs  split_point.rs  split_wasm.js  todo.txt  util.rs  wasmparser_shim.rs
crates/wasm_split_cli/src/graph_utils/: mod.rs  tarjan_scc.rs
crates/wasm_split_cli/src/snippets/: makeFetch.web.debug.js  makeFetch.web.js  split_wasm.js
crates/wasm_split_cli/tests/: no_reloc_stub_end_to_end.rs
crates/wasm_split_macros/: Cargo.toml  README.md
crates/wasm_split_macros/src/: lib.rs
examples/: .gitignore  Cargo.toml  build.py
examples/example/: Cargo.toml
examples/example/src/: lib.rs
integration/: Cargo.toml  runner.sh
integration/.cargo/: config.toml
integration/callback-in-split/: Cargo.toml
integration/callback-in-split/src/: lib.rs
integration/many_shares/: Cargo.toml
integration/many_shares/src/: lib.rs
integration/optimize_splits/: Cargo.toml
integration/optimize_splits/src/: lib.rs
integration/simple/: Cargo.toml
integration/simple/src/: lib.rs
integration/static_mut/: Cargo.toml
integration/static_mut/src/: lib.rs
test-runner/: Cargo.toml  rust-toolchain.toml
test-runner/.cargo/: config.toml
test-runner/src/: main.rs
