[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = [
    "Greg Johnston <greg.johnston@gmail.com>", # a leptos developer
    # author of the initial prototype, no longer actively maintaining
    "Jeremy Maitin-Shepard <jbms@google.com>",
    "Martin Molzer <worldsbegin@gmx.de>", # a yew developer
]
description = "Split a WASM module into lazily loadable chunks"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/WorldSEnder/wasm-split-prototype"
categories = ["wasm", "web-programming"]

[workspace.dependencies]
wasm_split_macros = { version = "0.2.0-rc.0", path = "crates/wasm_split_macros" }

[profile.release]
opt-level = "s"
lto = true
