[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = [
    "Greg Johnston <greg.johnston@gmail.com>", # a leptos developer
    # author of the initial prototype, no longer actively maintaining
    "Jeremy Maitin-Shepard <jbms@google.com>",
    "Martin Molzer <worldsbegin@gmx.de>", # a yew developer
]
description = "Split a WASM module into lazily loadable chunks"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/WorldSEnder/wasm-split-prototype"
categories = ["wasm", "web-programming"]

[workspace.dependencies]
# The version of the macro is pinned to a specific minor version (even after 1.0).
# This is a slight break from the usual semver semantics, but okay because only `wasm_split_helpers`
# should directly depend on `wasm_split_macros`.
# This reason is semver stability: The macro assumes certain structure to the (hidden)
# `rt` module in `wasm_split_helpers`.
# Upgrade paths:
# - when changing internals of `rt`, release a new minor version of the macro and bump the
#   version requirement here.
# - when adjusting the macro without touching `rt`, release a new patch version of the macro.
wasm_split_macros = { version = ">= 0.2.0-rc.2, < 0.3", path = "crates/wasm_split_macros" }

[profile.release]
opt-level = "s"
lto = true
