# This is a separate workspace to facilitate better integration testing.
# One workspace would force unification of crate features (and versions)
# with the dependencies of the splitting tool itself.
[workspace]
members = [
    "example"
]
resolver = "2"

[workspace.dependencies]
wasm_split = { path = "../crates/wasm_split", package = "wasm_split_helpers" }

[profile.release]
opt-level = "s"
lto = true

[patch.crates-io]
wasm-bindgen =  { git = "https://github.com/WorldSEnder/wasm-bindgen.git", branch = "test-keep-lld-exports" }
wasm-bindgen-futures =  { git = "https://github.com/WorldSEnder/wasm-bindgen.git", branch = "test-keep-lld-exports" }
js-sys =  { git = "https://github.com/WorldSEnder/wasm-bindgen.git", branch = "test-keep-lld-exports" }
web-sys =  { git = "https://github.com/WorldSEnder/wasm-bindgen.git", branch = "test-keep-lld-exports" }
