# This is a separate workspace to facilitate better integration testing.
# One workspace would force unification of crate features (and versions)
# with the dependencies of the splitting tool itself.
[workspace]
members = [
    "example"
]
resolver = "2"

[workspace.dependencies]
wasm_split_helpers = { path = "../crates/wasm_split" }

[profile.release]
opt-level = "s"
lto = true

[patch.crates-io]
wasm-bindgen =  { git = "https://github.com/wasm-bindgen/wasm-bindgen.git", branch = "main" }
wasm-bindgen-futures =  { git = "https://github.com/wasm-bindgen/wasm-bindgen.git", branch = "main" }
js-sys =  { git = "https://github.com/wasm-bindgen/wasm-bindgen.git", branch = "main" }
web-sys =  { git = "https://github.com/wasm-bindgen/wasm-bindgen.git", branch = "main" }
