# This is a separate workspace to facilitate better integration testing.
# One workspace would force unification of crate features (and versions)
# with the dependencies of the splitting tool itself.
[workspace]
members = [
    "example"
]
resolver = "2"

[workspace.dependencies]
wasm_split_helpers = { path = "../crates/wasm_split" }

[profile.release]
opt-level = "s"
lto = true
