# This is a separate workspace to facilitate better integration testing.
# One workspace would force unification of crate features (and versions)
# with the dependencies of the splitting tool itself.
[workspace]
members = [
    "simple",
    "callback-in-split",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
wasm_split_helpers = { path = "../crates/wasm_split", version = "0.2.0-rc.0" }
wasm-bindgen = "0.2.104"
wasm-bindgen-futures = "0.4.54"
wasm-bindgen-test = "0.3.54"

[patch.crates-io]
wasm-bindgen = { git = "https://github.com/WorldSEnder/wasm-bindgen.git", branch = "test-keep-lld-exports" }
wasm-bindgen-futures = { git = "https://github.com/WorldSEnder/wasm-bindgen.git", branch = "test-keep-lld-exports" }
wasm-bindgen-test = { git = "https://github.com/WorldSEnder/wasm-bindgen.git", branch = "test-keep-lld-exports" }
