[workspace]
# this is in its own workspace to disconnect the toolchain requirement

[package]
name = "wasm-split-test-runner"
version = "0.2.104"
authors = []
edition = "2024"
publish = false

[dependencies]
# this MUST be the same bindgen version as used on the tested artifact
wasm-bindgen-cli = { version = "=0.2.104", artifact = ["bin:wasm-bindgen-test-runner"] }
wasm_split_cli_support = { path = "../crates/wasm_split_cli" }
eyre = "0.6.12"
tempfile = "3.23.0"
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }

[patch.crates-io]
wasm-bindgen-cli = { git = "https://github.com/WorldSEnder/wasm-bindgen.git", branch = "test-keep-lld-exports" }
