[package]
name = "wasm_split_helpers"
version = "0.2.0-rc.2"
authors.workspace = true
categories.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
async-once-cell = "0.5.3"
wasm_split_macros.workspace = true
