[package]
name = "wasm_split_cli_support"
version = "0.2.1"
authors.workspace = true
categories.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
eyre = { version = "0.6.12" }
tracing = { version = "0.1", default-features = false, features = ["std"] }
lazy_static = "1.4.0"
regex = "1.10.4"
wasm-encoder = { version = "0.240.0", features = ["wasmparser"] }
wasmparser = "0.240.0"
# bin-only depdencies
clap = { version = "4.5.50", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3.20", features = ["fmt"], optional = true }

[lib]
name = "wasm_split_cli_support"

[[bin]]
name = "wasm_split_cli"
required-features = ["build-binary"]

[features]
build-binary = ["dep:clap", "dep:tracing-subscriber"]
