[package]
name = "wasm_split_cli_support"
version = "0.2.2"
authors.workspace = true
categories.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
eyre = "0.6"
tracing = { version = "0.1", default-features = false, features = ["std"] }
lazy_static = "1.4"
regex = "1.12"
wasm-encoder = { version = "0.252", features = ["wasmparser"] }
wasmparser = "0.252"
# bin-only depdencies
clap = { version = "4.5", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", features = ["fmt"], optional = true }

[dev-dependencies]
tempfile = "3.27.0"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[lib]
name = "wasm_split_cli_support"

[[bin]]
name = "wasm_split_cli"
required-features = ["build-binary"]

[features]
build-binary = ["dep:clap", "dep:tracing-subscriber"]
