[package]
name = "wasm_split_macros"
version = "0.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
# because we emit unsafe extern blocks/safe extern items
rust-version = "1.84"

[dependencies]
base16 = "0.2.1"
sha2 = "0.10.8"
# for proc macro support
quote = "1.0.36"
syn = { version = "2.0.59", features = ["full"] }

[lib]
proc-macro = true
